update elasticsearch part 2
